Endpoint for global node search
