# app/serializers/api/v3/nodes_search/node_serializer.rb
@@ -1,0 +1,9 @@
+module Api
+  module V3
+    module NodesSearch
+      class NodeSerializer < ActiveModel::Serializer
+        attributes :id, :name, :node_type, :context_id, :profile
+      end
+    end
+  end
+end
